<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">AndroidAllDemos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_about">About</string>
    <string name="setup_gesture_code">设置手势密码</string>
    <string name="setup_gesture_pattern">绘制解锁图案</string>
    <string name="setup_gesture_pattern_again">再次绘制解锁图案</string>
    <string name="forget_gesture_code">忘记手势密码?</string>
    <string name="use_other_account_login">用其他账号登录</string>
    <string name="set_gesture_pattern">绘制解锁图案</string>
    <string name="set_gesture_pattern_reason">设置手势密码，防止他人未经授权查看</string>
    <string name="reset_gesture_code">重新设置手势密码</string>
    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="bound_search_result_head_zqmc">债券名称</string>
    <string name="bound_search_result_head_zqjc">债券简称</string>
    <string name="bound_search_result_head_zqdm">债券代码</string>
    <string name="bound_search_result_head_fxjc">发行人简称</string>
    <string name="bound_search_result_head_ksr">发行日期</string>
    <string name="bound_search_result_head_fxjg">发行价格(元)</string>
    <string name="bound_search_result_head_sjfxze">实际发行总额(亿元)</string>
    <string name="bound_search_result_head_jxfs">计息方式</string>
    <string name="bound_search_result_head_fxzq">付息周期/付息频率</string>
    <string name="bound_search_result_head_pmll">票面利率(%)</string>
    <string name="bound_search_result_head_lc">利差(%)</string>
    <string name="bound_search_result_head_zjll">基准利率(%)</string>
    <string name="bound_search_result_head_zqqx">证券期限</string>
    <string name="bound_search_result_head_zqpj">信用评级一</string>
    <string name="bound_search_result_head_ztpj">信用评级二</string>
    <string name="bound_search_result_head_zqpjjg">评级机构一</string>
    <string name="bound_search_result_head_ztpjjg">评级机构二</string>
    <string name="bound_search_result_head_zqzwdjr">债券债务登记日</string>
    <string name="bound_search_result_head_ltr">交易流通起始日</string>
    <string name="bound_search_result_head_jzghr">交易流通终止日</string>
    <string name="bound_search_result_head_qxr">起息日</string>
    <string name="bound_search_result_head_dqr">兑付日</string>
    <string name="about_info">version:1.0.0 \n\n
        QQ交流群:247370192 \n\n
        Fork me on Github. \n\n
        https://github.com/lygttpod/AndroidAllDemos.git \n\n
        More things will coming!
    </string>
     <string name="about_app">稳！准！狠！\n\n
         使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发！\n\n

    </string>
    <string name="aaaa">使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发使用当下主流框架，实现快速开发,我们不生产代码，只是代码的搬运工。找准所需，迁移使用，快速开发</string>
    <string name="send">发送</string>
    <string name="not_connected">没有连接到蓝牙设备</string>
    <string name="bt_not_enabled_leaving">蓝牙开启不被允许，只能遗憾离开蓝牙聊天功能.</string>
    <string name="title_connecting">正在连接...</string>
    <string name="title_connected_to">连接到 <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">没有链接</string>
    <string name="scanning">搜索设备...</string>
    <string name="select_device">选择一个蓝牙连接</string>
    <string name="none_paired">没有已绑定的蓝牙设备</string>
    <string name="none_found">没有发现蓝牙设备</string>
    <string name="button_scan">搜索蓝牙设备</string>
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="bt_tip">
        1、保证对方也已安装此软件； \n
        2、点击右上角搜索按钮搜索设备； \n
        3、保证蓝牙开启并且对其他设备可见； \n
        4、尽情畅谈吧！
    </string>
</resources>